--- a/katering.html
+++ b/katering.html
@@ -227,7 +227,7 @@
 
 <!-- Footer -->
 <footer class="center light-grey padding-48 large">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="hover-text-green">w3.css</a></p>
+  <p>Powered by <a href="#" title="W3.CSS" target="_blank" class="hover-text-green">w3.css</a></p>
 </footer>
 
 <script>
