--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </p>
 
       <p>
-        Ponúkame širokú škálu služieb vrátane profesionálneho fotografovania a videografie, DJ a zvukovej techniky,
+        Ponúka širokú škálu služieb vrátane profesionálneho fotografovania a videografie, DJ a zvukovej techniky,
         cateringových služieb, dekorácií a osvetlenia a mnoho ďalších. Nechajte naše skúsené tímy vytvoriť atmosféru,
         ktorá posilní puto medzi vašimi kolegami a poskytne nezabudnuteľné zážitky.
       </p>
