--- a/katering.html
+++ b/katering.html
@@ -78,9 +78,6 @@
     <div class="col m3">
       <a href="služby%20.html" class="button block black">SLUZBY</a>
     </div>
-    <div class="col m3">
-      <a href="#" class="button block black">FORMULÁR</a>
-    </div>
   </div>
 </div>
 
@@ -226,8 +223,16 @@
 </div>
 
 <!-- Footer -->
-<footer class="center light-grey padding-48 large">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="hover-text-green">w3.css</a></p>
+<footer class="container padding-64 light-grey center opacity xlarge" style="margin-top:128px">
+  <p style=" text-align: center">&copy; 2024 Soiree Specialist. All rights reserved.</p>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Náš tým</a></li>
+      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Privacy Policy</a></li>
+    </ul>
+  </nav>
 </footer>
 
 <script>
