--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </div>
   </div>
 
-
+  <h5 class="center padding-24"><span class="tag wide">NÁŠ TÝM</span></h5>
   <!-- Contact -->
   <div class="row-padding padding-16 center" >
     <div class="quarter quarter-20">
