--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head>
-    <title>FIREMNÉ večierky</title>
+    <title>HLAVNÁ STRÁNKA</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
@@ -66,26 +66,6 @@
 <!-- Add a background color and large text to the whole page -->
 <div class="sand grayscale large">
 
-    <div class="top">
-        <div class="row padding black">
-            <div class="col m3 ">
-                <a href="#" class="button block black">ABOUT</a>
-            </div>
-            <div class="col m3">
-                <a href="katering.html" class="button block black">KATERING</a>
-            </div>
-            <div class="col m3">
-                <a href="Projekty.html" class="button block black">PROJEKTY</a>
-            </div>
-            <div class="col m3">
-                <a href="služby%20.html" class="button block black">SLUZBY</a>
-            </div>
-            <div class="col m3">
-                <a href="#" class="button block black">FORMULÁR</a>
-            </div>
-        </div>
-    </div>
-
     <!-- About Container -->
     <div class="container" id="about">
         <div class="content" style="max-width:700px">
@@ -126,28 +106,28 @@
     <div class="row-padding padding-16 center" >
         <div class="quarter quarter-20">
             <img src="img/%20-2.jpg" alt="Sandwich" style="width:100%">
-            <h3>The Perfect Sandwich, A Real NYC Classic</h3>
+            <h3>KRISTIÁN ŠTEFANKA - VAJKIKI</h3>
             <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
             <img src="img/%20-2.jpg" alt="Steak" style="width:100%">
-            <h3>Let Me Tell You About This Steak</h3>
+            <h3>NATÁLIA GONOSOVÁ  - BIELIDLO</h3>
             <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
             <img src="img/man.jpg" alt="Cherries" style="width:100%">
-            <h3>Cherries, interrupted</h3>
+            <h3>NIKOL KURUCOVÁ - NIKI</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
             <p>What else?</p>
         </div>
         <div class="quarter quarter-20">
             <img src="img/man.jpg" alt="Pasta and Wine" style="width:100%">
-            <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+            <h3>DORA GÁLOVÁ - DORY</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="quarter quarter-20">
             <img src="img/man.jpg" alt="Pasta and Wine" style="width:100%">
-            <h3>Once Again, Robust Wine and Vegetable Pasta</h3>
+            <h3>DANIEL MOSNÝ - DIDY</h3>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
     </div>
