--- a/SVADBA/hlavna-svadba.html
+++ b/SVADBA/hlavna-svadba.html
@@ -27,7 +27,7 @@
         </li>
 
         <li class="nav-item">
-            <a href="../FIREMNÉ%20VEČIERKY/Firemné%20večierky.html">Company Parties</a>
+            <a href="../">Company Parties</a>
         </li>
 
         <li class="nav-item">
