--- a/SVADBA/GDPR-svadba.html
+++ b/SVADBA/GDPR-svadba.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/x-icon" href="Obrázky/logo1.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, height=device-height initial-scale=1.0">
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style-svadby.css />
 
   <style>
   </style>
