--- a/FIREMNÉ VEČIERKY/služby-firemné.html
+++ b/FIREMNÉ VEČIERKY/služby-firemné.html
@@ -33,16 +33,16 @@
             <img src="img/logo/logo1.png" class="block button" style="width: 79px!important;" alt="">
         </div>
         <div class="col m3 ">
-            <a href="#" class="button block black">STUŽKOVÉ</a>
+            <a href="../STUŽKOVÁ/hlavna-stuzkove.html" class="button block black">STUŽKOVÉ</a>
         </div>
         <div class="col m3">
-            <a href="#" class="button block black">SVADBA</a>
+            <a href="../SVADBA/hlavna-svadba.html" class="button block black">SVADBA</a>
         </div>
         <div class="col m3">
             <a href="#" class="button block black">FIREMNÉ VEČIERKY</a>
         </div>
         <div class="col m3">
-            <a href="#" class="button block black">OSLAVY</a>
+            <a href="../" class="button block black">OSLAVY</a>
         </div>
         <div class="col m3">
             <a href="#" class="button block black">ROZLÚČKY</a>
