--- a/STUŽKOVÁ/MOje_projekty-stuzkove.html
+++ b/STUŽKOVÁ/MOje_projekty-stuzkove.html
@@ -24,7 +24,7 @@
     </ul>
   </header>
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style-stuzkove.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
