--- a/STUŽKOVÁ/obleky_na_stuzkovu-stuzkove.html
+++ b/STUŽKOVÁ/obleky_na_stuzkovu-stuzkove.html
@@ -25,7 +25,7 @@
   </header>
   <meta charset="UTF-8">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style-stuzkove.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Obleky na stužkovú</title>
